force-app/main/default/objects/EZProtect4SF__ScanActivity__c/EZProtect4SF__ScanActivity__c.object-meta.xml
<CustomObject>
    <description>Contains activity of all scans of files by EZProtect.</description>
    <label>Scan Activity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scan Activity</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>