force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__Checksum__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Checksum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The unique fingerprint for that file, it’s a very good way to let you know if that file changed, if you change one letter in the doc it will populate a different checksum number</inlineHelpText>
    <label>Checksum</label>
    <length>80</length>
    <type>Text</type>
</CustomField>