force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ContentDocumentId__c</fullName>
    <description>If the TargetType is &apos;ContentVersion&apos; this field will contain the ContentDocumentId of the TargetId</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content Document Id (DEPRECATED)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>