force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__Extension__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Extension__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The extension that was used i. Jpeg, Gif, Zip, etc.</inlineHelpText>
    <label>Extension</label>
    <length>30</length>
    <type>Text</type>
</CustomField>