force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__EZProtectConnectedAccountId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__EZProtectConnectedAccountId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Your EzProtect Account ID is your customer Account ID for EzProtect</inlineHelpText>
    <label>EZProtect Connected Account Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>