force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__EZProtectScanId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__EZProtectScanId__c</fullName>
    <description>The EZProtect External Id for the scan in the EZProtect System.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Is the EzProtect ID # of the scan.</inlineHelpText>
    <label>EZProtect Scan Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>