force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__File_Type__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__File_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It&apos;s the true type of the file detected by the file type scanner</inlineHelpText>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>