force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__FileSize__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__FileSize__c</fullName>
    <description>Size of the file associated to the scan record</description>
    <inlineHelpText>It&apos;s the document type (ie. word doc, jpeg, &quot;img&quot;, pdf, excel, etc.) of the file uploaded  that’s been detected by the EzProtect scanner.</inlineHelpText>
    <label>File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>