force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__IsLatest__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__IsLatest__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the scan activity record is the latest scan for the file.</description>
    <inlineHelpText>If there are versions of the file, then this tells you if this is the most recent version scanned. Refer to the Content Document ID for the latest version that’s been scanned.</inlineHelpText>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>