force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__MIME_Type__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__MIME_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It’s a multipurpose internet male extension, it identifies the format of the document and how big. It is a standard web definition.</inlineHelpText>
    <label>MIME Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>