force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__RelatedRecord__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__RelatedRecord__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; EZProtect4SF__RelatedRecordId__c , &apos;View&apos;, &apos;_new&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is the record  that is realted to the file that was uploaded.</inlineHelpText>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>