force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__RelatedRecordId__c</fullName>
    <description>The Id of the recorded record, if any, to the file, content, or target that was scanned.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The record where the file was uploaded in.</inlineHelpText>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>