force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__Result__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>Threat</fullName>
            </value>
            <value>
                <fullName>Suspicious</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>