force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__SalesforceFileType__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__SalesforceFileType__c</fullName>
    <description>Holds the type of the file that Salesforce adds automatically to the scanned content version</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>It&apos;s the type of the file detected by Salesforce</inlineHelpText>
    <label>Salesforce File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>