force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__ScanDetail__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ScanDetail__c</fullName>
    <description>Contains detailed information about the threat.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The results of the scan, including the document type and identyfying if the documet was found to be safe or if a threat, then the type of threat.</inlineHelpText>
    <label>Scan Detail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>