force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__Status__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Status__c</fullName>
    <description>The current status for the scan of the file.</description>
    <inlineHelpText>It identifies if the doc is  pending being scanned, is it in the process of being scanned. Is the scan complete, or did it error out.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pending Upload</fullName>
            </value>
            <value>
                <fullName>Pending Scan</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>File Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>