force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__TargetContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetContentDocumentId__c</fullName>
    <description>If the TargetType is &apos;ContentVersion&apos; this field will contain the ContentDocumentId of the target ContentVersion</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The Content Document ID represents an uploaded Salesforce file that is used to search and or update a specific version of the file that&apos; has been uploaded to Salesforce files.</inlineHelpText>
    <label>Target Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>