force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__TargetCreatedById__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetCreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who originally uploaded the file, contact, or other target.</description>
    <inlineHelpText>The user who originally uploaded the file, contact, or other target.</inlineHelpText>
    <label>Target Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scan_Actvity</relationshipName>
    <type>Lookup</type>
</CustomField>