force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__TargetCreatedByIP__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetCreatedByIP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The IP of the User who originally uploaded the file, contact, or other target.</inlineHelpText>
    <label>Target Created By IP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>