force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__TargetCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetCreatedDate__c</fullName>
    <description>Created Date of the Target Id that associated to the Scan Activity record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Created Date</label>
    <type>DateTime</type>
</CustomField>