force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__TargetId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Is the Salesforce record id of the file.</inlineHelpText>
    <label>Target Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>