force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__TargetOwnerId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetOwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current owner of the file, content, or target that was scanned by the scanner. This could be different than the user who originally created the file, content, or target.</description>
    <inlineHelpText>The current owner of the file, content, or target that was scanned by the scanner. This could be different than the user who originally created the file, content, or target.</inlineHelpText>
    <label>Target Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scan_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>