force-app/main/default/objects/EZProtect4SF__ScanActivity__c/fields/EZProtect4SF__TargetType__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetType__c</fullName>
    <inlineHelpText>It is the conetnet version which could be a document, jpeg, csv or image file. The target type is what can be uploaded to Salesforce. Keep in mind as well documents, and attachemnts can only be uploaded via Salesforce Classic.</inlineHelpText>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ContentVersion</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>