force-app/main/default/objects/EZProtect4SF__ScanActivity__c/listViews/EZProtect4SF__All.listView-meta.xml
<ListView>
    <fullName>EZProtect4SF__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>