force-app/main/default/objects/EZProtect4SF__ScanActivity__c/listViews/EZProtect4SF__All_Scans.listView-meta.xml
<ListView>
    <fullName>EZProtect4SF__All_Scans</fullName>
    <columns>NAME</columns>
    <columns>EZProtect4SF__TargetType__c</columns>
    <columns>EZProtect4SF__Result__c</columns>
    <columns>EZProtect4SF__Status__c</columns>
    <columns>EZProtect4SF__RelatedRecord__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Scans</label>
</ListView>